samples/_failures_safe/1761208383_c34534_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b71c3d1.c: In function ‘main’:
./samples/SAFE/__tmp_1b71c3d1.c:130:9: error: expected expression at end of input
  130 |         if (len >
      |         ^~
./samples/SAFE/__tmp_1b71c3d1.c:130:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1b71c3d1.c:130:9: error: expected declaration or statement at end of input
